CORS configuration moved to WebSecurityConfig. Changed use of ‘.collect(Collectors.toList()))’ to ‘toList()’.